# query-watch

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/query_watch/core/: normalizer.py  query_record.py  watcher.py
tests/test_core/: test_normalizer.py  test_query_record.py  test_watcher.py
