[project]
name = "query-watch"
version = "0.1.0"
description = ""
authors = [
    {name = "joao-faria-dev",email = "joaovitorfaria.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=9.0.1,<10.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "query_watch", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
